# meta-hackathon-solo

./: .dockerignore  .gitignore  Evaluation_Criteria.md  README.md  __init__.py  client.py  code_analysis_line_by_line.md  inference.py  inference_output.txt  models.py  openenv.yaml  project_documentation.md  pyproject.toml  requirements.txt  test_endpoints.py  utils.py
server/: Dockerfile  __init__.py  app.py  environment.py
